[workspace]
members = [".", "examples/*"]

[package]
name = "fount"
description = "A font manager for iced applications"
version = "0.2.0"
edition = "2024"

[features]
default = []
# Discover fonts bundled with Microsoft Office apps (e.g. Aptos, Calibri,
# Cambria). These fonts ship inside per-app resource directories rather
# than the OS font folders, so opting in scans those locations in addition
# to the system defaults. Use only on machines with a valid Office license.
office = []

[dependencies]
iced_core = "0.15.0-dev"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
toml = "0.8"
tracing = "0.1"
ttf-parser = "0.25"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }

[dev-dependencies]
tempfile = "3.27.0"
